--- a/style.scss
+++ b/style.scss
@@ -25,6 +25,7 @@ body {
 
 .container {
   margin: 0 auto;
+  background: rgba(255, 233, 255, 0.3);  
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
