--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://www.hd-freewallpapers.com/latest-wallpapers/abstract-website-backgrounds.jpg");
+  background-image: url("http://noupe.com/img/beautiful-background-20.jpg");
   font-family: "Courier New", Times, serif;
   color: $white; 
 }
