--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://noupe.com/img/beautiful-background-20.jpg");
+  background-image: url("http://matthewdoucette.com/wallpapers/cool_background_2_1024x768.jpg");
   font-family: "Courier New", Times, serif;
   color: $white; 
 }
