--- a/style.scss
+++ b/style.scss
@@ -200,7 +200,7 @@ table, th, td {
 
 .site-name {
   margin: 0;
-  color: $darkGray;
+  color: $white;
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
