--- a/style.scss
+++ b/style.scss
@@ -134,8 +134,8 @@ table, th, td {
   background: $white;
 }
 ::selection {
-  color: $black;
-  background: $lightGray;
+  color: $white;
+  background: $light gray;
 }
 
 // Nicolas Gallagher's micro clearfix hack
@@ -164,7 +164,7 @@ table, th, td {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+  border-bottom: 1px solid $white;
 
   @include mobile {
     text-align: center;
@@ -172,7 +172,7 @@ table, th, td {
 }
 
 .site-avatar {
-  float: left;
+  float: above;
   width: 70px;
   height: 70px;
   margin-right: 15px;
@@ -210,7 +210,7 @@ table, th, td {
 
 .site-description {
   margin: -5px 0 0 0;
-  color: $gray;
+  color: $white;
   font-size: 16px;
 
   @include mobile {
@@ -240,7 +240,7 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
+      color: $white;
     }
   }
 }
@@ -251,7 +251,7 @@ nav {
 
 .posts > .post {
   padding-bottom: 2em;
-  border-bottom: 1px solid $lightGray;
+  border-bottom: 1px solid $white;
 }
 
 .posts > .post:last-child {
@@ -262,9 +262,9 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid $gray;
+    border-left: 2px solid $white;
     padding: 0.1em 1em;
-    color: $gray;
+    color: $white;
     font-size: 22px;
     font-style: italic;
   }
@@ -283,7 +283,7 @@ nav {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+  background-color: $white;
 }
 
 footer {
