--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://matthewdoucette.com/wallpapers/cool_background_2_1024x768.jpg");
+  background-image: url("http://www.thepaintershandbook.com/wp-content/uploads/2016/10/Minecraft-Cool-Backgrounds.jpg");
   font-family: "Courier New", Times, serif;
   color: $white; 
 }
