--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://www.thepaintershandbook.com/wp-content/uploads/2016/10/Minecraft-Cool-Backgrounds.jpg");
+  background-image: url("http://7-themes.com/data_images/out/39/6902762-dark-background.jpg");
   font-family: "Courier New", Times, serif;
   color: $white; 
 }
