--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://7-themes.com/data_images/out/39/6902762-dark-background.jpg");
+  background-image: url("http://www.walldevil.com/wallpapers/a48/earth-cool-wallpaper-space-background-pictures-spacespace-wallpapers-backgrounds-history.jpg");
   font-family: "Courier New", Times, serif;
   color: $white; 
 }
