--- a/style.scss
+++ b/style.scss
@@ -171,7 +171,7 @@ table, th, td {
   }
 }
 
-.site-avatar {http://eqforchildren.com/wp-content/uploads/Emoji_Hopeful.png}
+.site-avatar {
   float: left;
   width: 100px;
   height: 100px;
