--- a/style.scss
+++ b/style.scss
@@ -115,7 +115,7 @@ table {
 }
 
 table, th, td {
-   border: 1px solid black;
+   border: 1px solid White;
 }
 
 // Fixes images in popup boxes from Google Translate
