--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://www.walldevil.com/wallpapers/a48/earth-cool-wallpaper-space-background-pictures-spacespace-wallpapers-backgrounds-history.jpg");
+  background-image: url("https://lh3.googleusercontent.com/s2d3XqiNL0MQiE-KD5o8IW4whSpyZbDNB-Ip8EYvPs2dEtgOnQuILxTD2S7YAFE0wFbT0xJ-mg=s640-h400-e365-rw");
   font-family: "Courier New", Times, serif;
   color: $white; 
 }
