--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("https://lh3.googleusercontent.com/s2d3XqiNL0MQiE-KD5o8IW4whSpyZbDNB-Ip8EYvPs2dEtgOnQuILxTD2S7YAFE0wFbT0xJ-mg=s640-h400-e365-rw");
+  background-image: url("https://media.giphy.com/media/lJp2Jpj6iCY2A/giphy.gif");
   font-family: "Courier New", Times, serif;
   color: $black; 
 }
