--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,7 @@ body {
 
 .container {
   margin: 0 auto;
-  background: rgb(0, 230, 230, 0.7);  
+  background: rgb(0, 230, 230);  
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
