--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,7 @@ body {
 .container {
   margin: 0 auto;
   background: rgb(0, 230, 230);  
+  class="w3-opacity"> 
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
