--- a/style.scss
+++ b/style.scss
@@ -25,8 +25,7 @@ body {
 
 .container {
   margin: 0 auto;
-  background: rgb(0, 230, 230);  
-  class="w3-opacity"> 
+  background: rgba(0, 230, 230, 0.7);
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
