--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("https://media.giphy.com/media/lJp2Jpj6iCY2A/giphy.gif");
+  background-image: url("http://cdn.wallpapersafari.com/57/98/JX5lMR.jpg");
   font-family: "Courier New", Times, serif;
   color: $black; 
 }
