--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://cdn.wallpapersafari.com/57/98/JX5lMR.jpg");
+  background-image: url("http://2.bp.blogspot.com/-ADTG6WM6dgw/UTAiPAgCIMI/AAAAAAAAiKs/Li18jrkgayY/s1600/Cars+HD+wallpaper+(32).jpg");
   background-repeat: no-repeat;
   background-position: right top;
   background-attachment: fixed;
