--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
   background-image: url("http://2.bp.blogspot.com/-ADTG6WM6dgw/UTAiPAgCIMI/AAAAAAAAiKs/Li18jrkgayY/s1600/Cars+HD+wallpaper+(32).jpg");
   background-repeat: no-repeat;
-  background-position: right top;
+  background-position: middle;
   background-attachment: fixed;
   font-family: "Courier New", Times, serif;
   color: $black; 
