--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("https://images7.alphacoders.com/460/460370.jpg");
+  background-image: url("http://4.bp.blogspot.com/-6RFbF0GIZZY/VopziLKLSiI/AAAAAAAAA9A/oj0_1UQzB0I/s320/mclaren_p1_2014-wide.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
