--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
   background-image: url("http://www.sugarlandprinting.com/wp-content/uploads/2015/11/Cool-Black-Car-Racing-2014-Mclaren-P1-Auto-Poster-Decor-Popular-decorative.jpg");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: middle;
   background-attachment: fixed;
   font-family: "Courier New", Times, serif;
