--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://www.sugarlandprinting.com/wp-content/uploads/2015/11/Cool-Black-Car-Racing-2014-Mclaren-P1-Auto-Poster-Decor-Popular-decorative.jpg");
+  background-image: url("http://bsnscb.com/data/out/12/39451468-audi-r8-wallpapers.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
