--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://bsnscb.com/data/out/12/39451468-audi-r8-wallpapers.jpg");
+  background-image: url("https://s-media-cache-ak0.pinimg.com/originals/29/bb/0e/29bb0e37c2bd3be5e5f1ca737f660104.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
