--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://images.car.bauercdn.com/upload/19057/images/1audiq7.jpg");
+  background-image: url("http://cars-blog.net/data_images/models/audi-q7/audi-q7-06.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
