--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://cars-blog.net/data_images/models/audi-q7/audi-q7-06.jpg");
+  background-image: url("http://gizmos.republica.com/files/2012/12/audi-q7-2013.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
