--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://s2.webbnc.vn/uploadv2/web/62/627/product/2015/11/30/01/48/1448891441_audi-q7_2016_1024x768_wallpaper_07.jpg");
+  background-image: url("http://www.planwallpaper.com/static/images/cool-background.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
