--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://www.planwallpaper.com/static/images/cool-background.jpg");
+  background-image: url("http://www.hdwallpapersfreedownload.com/uploads/large/cars/audi-q7-desktop-wallpaper.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
