--- a/style.scss
+++ b/style.scss
@@ -120,7 +120,7 @@ table {
 
 table, th, td {
    border: 1px solid white;
-	background-color:rgba(0, 2, 4, 0.4);
+	background-color:rgb(242, 242, 242);
 
 }
 
