--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ body {
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
-  font-family: "Courier New", Times, serif;
+  font-family: $Helvetica;
   color: $black; 
 }
 
@@ -35,7 +35,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Courier New";
+  font-family: $HelveticaNeue;
   color: $black;
   font-weight: bold;
 
