--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ body {
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
-  font-family: $Helvetica;
+  font-family: $Arial;
   color: $black; 
 }
 
@@ -35,7 +35,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $HelveticaNeue;
+  font-family: $Arial;
   color: $black;
   font-weight: bold;
 
@@ -225,7 +225,7 @@ div.vid {
   margin: 0;
   color: $black;
   cursor: pointer;
-  font-family: $helveticaNeue;
+  font-family: $Arial;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -244,7 +244,7 @@ div.vid {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
+  font-family: $Arial;
   font-size: 18px;
 
   @include mobile {
