--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ body {
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
-  font-family: $Arial;
+  font-family: $helveticaNeue;
   color: $black; 
 }
 
