--- a/style.scss
+++ b/style.scss
@@ -121,6 +121,8 @@ table {
 table, th, td {
    border: 1px solid white;
 	background-color:rgb(242, 242, 242);
+	 opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
 
 }
 
