--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://www.hdwallpapersfreedownload.com/uploads/large/cars/audi-q7-desktop-wallpaper.jpg");
+  background-image: url("https://www.planwallpaper.com/static/images/6995006-audi-r8-sports-car.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
