--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("https://www.planwallpaper.com/static/images/6995006-audi-r8-sports-car.jpg");
+  background-image: url("https://www.desktopbackground.org/download/1024x600/2010/12/21/129882_audi-wallpapers-1920x1080-wallpapers-full-hd_1920x1080_h.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
