--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("https://www.desktopbackground.org/download/1024x600/2010/12/21/129882_audi-wallpapers-1920x1080-wallpapers-full-hd_1920x1080_h.jpg");
+  background-image: url("https://cimg1.ibsrv.net/cimg/www.audiworld.com/1600x900_85/949/download-188949.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
