--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("https://cimg1.ibsrv.net/cimg/www.audiworld.com/1600x900_85/949/download-188949.jpg");
+  background-image: url("https://theelitecars.com/wp-content/uploads/2016/12/carwow-2017-land-rover-discovery-urban-render.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
