--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("https://theelitecars.com/wp-content/uploads/2016/12/carwow-2017-land-rover-discovery-urban-render.jpg");
+  background-image: url("imageedit_4_7880837157");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
