--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("imageedit_4_7880837157");
+  background-image: url("https://drive.google.com/open?id=1cGgfvuetyo-pWrLRft7HRocXFXkujkoq");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
