--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("https://drive.google.com/open?id=1cGgfvuetyo-pWrLRft7HRocXFXkujkoq");
+  background-image: url("https://wallpapersite.com/images/wallpapers/land-rover-discovery-svx-4096x2304-2019-4k-10012.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
