--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("https://wallpapersite.com/images/wallpapers/land-rover-discovery-svx-4096x2304-2019-4k-10012.jpg");
+  background-image: url("https://i0.wp.com/www.hdcarwallpapers.com/download/2019_land_rover_discovery_svx_4k_2-3840x2160.jpg?resize=1140%2C641&ssl=1");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
