--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("http://www.hdcarwallpapers.com/walls/2014_land_rover_discovery_vision_concept-wide.jpg");
+  background-image: url("https://www.topgear.com/sites/default/files/news/carousel/2015/04/Large%20Image_10119.jpg");
   background-repeat: no-repeat;
   background-position: middle;
   background-attachment: fixed;
